Fix crash when choosing data folder (#8505)
### Description

This fixes a crash when opening **Settings → Downloads → Choose data
folder** while Android reports an external/public storage volume that is
registered but currently unavailable.

`DataFolderAdapter` was using `List.of(...)` with the arrays returned by
Android storage directory APIs. In the unavailable-volume case, those
arrays can contain `null` entries. `List.of(...)` rejects null elements
and throws before the existing `isWritable(dir)` filtering logic can
run.

This change uses `Arrays.asList(...)` instead, preserving the existing
flow where non-writable or null storage entries are filtered by
`isWritable(dir)`.

Validation performed:

- Reproduced the crash locally with a mounted/unmounted public storage
volume scenario.
- Verified the crash no longer occurs after the fix.
- Verified the chooser updates from 4 entries → 2 entries when the
public volume is unavailable.
- Verified the chooser returns to 4 entries when the public volume is
available again.

Closes: #7919

### Checklist

- [x] I have read the contribution guidelines:
https://github.com/AntennaPod/AntennaPod/blob/develop/CONTRIBUTING.md#submit-a-pull-request
- [x] I have performed a self-review of my code, going through my
changes line by line and carefully considering why this line change is
necessary
- [x] I have run the automated code checks using `./gradlew checkstyle
lint`
- [x] My code follows the style guidelines of the AntennaPod project:
https://antennapod.org/contribute/develop/app/code-style
- [x] I have mentioned the corresponding issue and the relevant keyword
(e.g., "Closes: #xy") in the description (see
https://docs.github.com/en/issues/tracking-your-work-with-issues/linking-a-pull-request-to-an-issue)
- [ ] If it is a core feature, I have added automated tests